# test_helper

./: .gitignore  README.md  main.py  models.py  mvp1.py  mvp1_text2json.py  mvp2_json2answer.py  pyproject.toml  test_docx2txt.py
backend/: .dockerignore  Dockerfile  main.py  mvp1_text2json.py  mvp2_json2answer.py  pyproject.toml  test_docx2txt.py
backend/api/v1/routers/: neurotest.py
backend/files/: 01_02_10.docx  01_02_10_answers.json  01_02_10_text.json  DM4.docx  history.docx  history_text.json  index.json  БД12_2.docx
backend/services/: json2answer.py
files/: test_answer.json  text_01_03.docx  text_01_03.json  text_01_03_data.txt  text_01_03_dump.txt  БД12_3.json
frontend/: index.html
