[project]
name = "test-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "llama-cpp-python>=0.3.20",
    "python-multipart>=0.0.26",
    "uvicorn>=0.46.0",
]
