[project]
name = "test-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "docx2txt>=0.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-cerebras>=0.8.2",
    "langchain-openrouter>=0.2.1",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "uvicorn>=0.46.0",
]
